# audiobook-generator

./: README.md  __init__.py  chapterizer.py  convert-epub-to-audiobook.ipynb  defaults.py  ipython_script.py  main.py  pyproject.toml  stacktrace.txt  tts.py
.github/workflows/: python-publish-testpypi.yml  python-publish.yml
audiobook_generator/: chapterizer.py  defaults.py  main.py  tts.py  util.py
