[project]
name = "gen-audio"
version = "0.1.0"
description = "Generate audio file from given files."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "ebooklib>=0.18",
    "kokoro>=0.8.2",
    "misaki[zh]>=0.8.2",
    "pip>=25.0.1",
    "soundfile>=0.13.1",
]
